<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/a15_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/text_action_distance"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/a15_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:layout_below="@+id/a15_distance_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789.-"/>

    <TextView
        android:id="@+id/a15_angle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/text_action_angle"
        android:layout_below="@+id/a15_distance"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/a15_angle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/a15_angle_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789.-"/>

    <Button
        android:id="@+id/a15_send_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a15_angle"
        android:text="@string/button_send_text"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>



</RelativeLayout>