<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/a18_coordinateX_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:text="@string/text_action_coordinateX"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/a18_coordinateX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"

        android:layout_below="@+id/a18_coordinateX_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789.-"/>

    <TextView
        android:id="@+id/a18_coordinateY_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:text="@string/text_action_coordinateY"
        android:layout_below="@+id/a18_coordinateX"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/a18_coordinateY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_below="@+id/a18_coordinateY_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789.-"/>

    <Button
        android:id="@+id/a18_send_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a18_coordinateY"
        android:text="@string/button_send_text"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>



</RelativeLayout>