<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/connection_ip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/text_ip"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/connection_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:layout_below="@+id/connection_ip_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789."/>

    <TextView
        android:id="@+id/connection_port_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:text="@string/text_port"
        android:layout_below="@+id/connection_ip"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/connection_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/connection_port_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789"/>

    <Button
        android:id="@+id/login_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection_port"
        android:text="@string/button_connection_text"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/no_connection_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:text="MODO SIN CONEXIÓN"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>


</RelativeLayout>